--- a/themes/hugo-swift-theme/layouts/partials/favicon.html
+++ b/themes/hugo-swift-theme/layouts/partials/favicon.html
@@ -1,7 +1,9 @@
-<link rel='apple-touch-icon' sizes='180x180' href='{{ absURL "images/icons/apple-touch-icon.png" }}'>
-<link rel='icon' type='image/png' sizes='32x32' href='{{ absURL "images/icons/favicon-32x32.png" }}'>
-<link rel='icon' type='image/png' sizes='16x16' href='{{ absURL "images/icons/favicon-16x16.png" }}'>
+<link rel='apple-touch-icon' sizes='180x180' href='{{ absURL "images/favicon.ico" }}'>
+<link rel='icon' type='image/png' sizes='32x32' href='{{ absURL "images/favicon.ico" }}'>
+<link rel='icon' type='image/png' sizes='16x16' href='{{ absURL "images/favicon.ico" }}'>
 <link rel='manifest' href='{{ absURL "images/icons/site.webmanifest" }}'>
-<link rel='mask-icon' href='{{ absURL "images/icons/safari-pinned-tab.svg" }}' color='#5bbad5'>
+<link rel="shortcut icon" href="{{ absURL "images/favicon.ico" }}" />
+<link rel="icon" sizes="32x32" href="{{ absURL "images/favicon.ico" }}">
+<link rel="Bookmark" href="{{ absURL "images/favicon.ico" }}" />
 <meta name='msapplication-TileColor' content='#da532c'>
 <meta name='theme-color' content='#ffffff'>
