fix:采用jane主题,添加侧边导航

--- a/static/css/toc.css
+++ b/static/css/toc.css
@@ -1,49 +1,8 @@
-.post .post-toc {
-    position: absolute;
-    width: 200px;
-    margin-left: 785px;
+#post-toc {
+    position: fixed;
     padding: 10px;
-    font-family: Athelas,STHeiti,Microsoft Yahei,serif;
-    border-radius: 5px;
-    background: rgba(248,245,236,.6);
-    box-shadow: 1px 1px 2px rgba(0,0,0,.125);
-    word-wrap: break-word;
-    box-sizing: border-box
-}
-
-.post .post-toc .post-toc-title {
-    margin: 0 10px;
-    font-size: 20px;
-    font-weight: 400;
-    text-transform: uppercase
-}
-
-.post .post-toc .post-toc-content {
-    font-size: 15px
-}
-
-.post .post-toc .post-toc-content.always-active ul {
-    display: block
-}
-
-.post .post-toc .post-toc-content>nav>ul {
-    margin: 10px 0
-}
-
-.post .post-toc .post-toc-content ul {
-    padding-left: 20px;
-    list-style: square
-}
-
-.post .post-toc .post-toc-content ul ul {
-    padding-left: 15px;
-    display: none
-}
-
-.post .post-toc .post-toc-content ul .has-active>ul {
-    display: block
-}
-
-.post .post-toc .post-toc-content .toc-link.active {
-    color: #c05b4d
+    display: block !important;
+    top: 150px;
+    right: 20px;
+    border-radius: 10px;
 }
