--- a/themes/jane/assets/sass/_partial/_post/_toc.scss
+++ b/themes/jane/assets/sass/_partial/_post/_toc.scss
@@ -1,14 +1,16 @@
 .post-toc {
-  position: absolute;
-  width: $post-toc-width;
-  margin-left: $post-toc-margin-left;
-  padding: 10px;
-  font-family: $global-serif-font-family;
-  border-radius: 5px;
-  background: $post-toc-backgroud;
-  box-shadow: 1px 1px 2px rgba(0,0,0,0.125);
-  word-wrap: break-word;
-  box-sizing: border-box;
+    position: fixed;
+    width: $post-toc-width;
+    margin-left: $post-toc-margin-left;
+    padding: 10px;
+    top:100px;
+    right:10px;
+    font-family: $global-serif-font-family;
+    border-radius: 5px;
+    background: $post-toc-backgroud;
+    box-shadow: 1px 1px 2px rgba(0,0,0,0.125);
+    word-wrap: break-word;
+    box-sizing: border-box;
 
   .post-toc-title {
     margin: 0 10px;
