--- a/themes/jane/layouts/_default/single.html
+++ b/themes/jane/layouts/_default/single.html
@@ -13,7 +13,9 @@
   </header>
 
   <!-- TOC -->
-  {{ partial "post/toc.html" . }}
+  <div style="position: fixed; right:5px;max-width:300px; overflow:auto; top: 100px; width: 10vw; bottom:50px">
+    {{ partial "post/new-toc.html" . }}
+  </div>
 
   <!-- Content -->
   <div class="post-content">
