feat:添加音乐功能

--- a/themes/jane/layouts/partials/post/reward.html
+++ b/themes/jane/layouts/partials/post/reward.html
@@ -1,4 +1,5 @@
 {{ if or .Params.reward (and .Site.Params.reward.enable (ne .Params.reward false)) }}
+  <h1>{{.Params.music_163}}</h1>
 <div class="post-reward">
   <input type="checkbox" name="reward" id="reward" hidden />
   <label class="reward-button" for="reward">{{ i18n "reward" }}</label>
