fix:改变music的位置

--- a/themes/jane/layouts/post/single.html
+++ b/themes/jane/layouts/post/single.html
@@ -46,7 +46,7 @@
     <!-- TOC -->
 
     <!-- Music -->
-    {{ partial "post/music_163.html" . }}
+{{/*    {{ partial "post/music_163.html" . }}*/}}
     <!-- Content -->
     <div class="post-content">
       {{ .Content }}
