--- a/themes/jane/layouts/partials/post/new-toc.html
+++ b/themes/jane/layouts/partials/post/new-toc.html
@@ -10,6 +10,8 @@
       <!-- https://github.com/gohugoio/hugo/issues/1778#issuecomment-483880269 -->
       <!-- {{.TableOfContents}} -->
     </aside>
+    <!-- Music -->
+    {{ partial "post/music_163.html" . }}
     <a href="#" id="toc-toggle"></a>
   </div>
 {{ end }}
