--- a/themes/jane/layouts/404.html
+++ b/themes/jane/layouts/404.html
@@ -3,7 +3,7 @@
 <script type="text/javascript"
         src="//qzonestyle.gtimg.cn/qzone/hybrid/app/404/search_children.js"
         charset="utf-8"
-        homePageUrl="https://sgfoot.com/"
+        homePageUrl="javascript:window.history.go(-1)"
         homePageName="回到博客首页">
 </script>
 {{ end }}
