--- a/themes/jane/layouts/404.html
+++ b/themes/jane/layouts/404.html
@@ -4,6 +4,6 @@
         src="//qzonestyle.gtimg.cn/qzone/hybrid/app/404/search_children.js"
         charset="utf-8"
         homePageUrl="javascript:window.history.go(-1)"
-        homePageName="回到博客首页">
+        homePageName="Back(百里江山博客)">
 </script>
 {{ end }}
